@@ -73,19 +73,29 @@
     <div class="column span-8">
 			<ol>
 				<li>Ordered list</li>
-				<ul>
-  				<li>Nested Unordered list</li>
-  				<ol>
-  				  <li>Nested Ordered list</li>
-  				</ol>
-  			</ul>
-				<li>Ordered List item</li>
-				<ol>
-				  <li>Nested Ordered list</li>
+				<li>Here's a nested unordered list
 				  <ul>
-				    <li>Nested Unordered list</li>
-				  </ul>
-				</ol>
+  				  <li>Nested Unordered list</li>
+  				  <li>Nested ordered list
+  				    <ol>
+  				      <li>The first</li>
+  				      <li>And the second</li>
+  				    </ol>
+  				  </li>
+  			  </ul>
+  			</li>
+				<li>Ordered List item</li>
+				<li>Nested Ordered list
+				  <ol>
+				    <li>Some point</li>
+				    <li>Nested Unordered list
+				      <ul>
+  				      <li>The first</li>
+  				      <li>And the second</li>
+				      </ul>
+				    </li>
+				  </ol>
+				</li>
 			</ol>
     </div>
     
@@ -95,8 +105,10 @@
       	<dd>definition list dd</dd>
       	<dt>definition list dt</dt>
       	<dd>definition list dd</dd>
-      	<dt>definition list dt</dt>
-      	<dd>definition list dd</dd>
+      	<dt>Lorem ipsum dolor sit amet, consectetur adipisicing elit adipisicing elit adipisicing elit</dt>
+      	<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit adipisicing elit adipisicing elit</dd>
+      	<dt>Lorem ipsum dolor sit amet, consectetur adipisicing elit adipisicing elit adipisicing elit</dt>
+      	<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit adipisicing elit adipisicing elit</dd>
       </dl>			
     </div>
     <hr>
@@ -139,24 +151,23 @@
         <strong>&lt;strong&gt;</strong><br>
         <del>&lt;del&gt; deleted</del><br>
         <dfn>&lt;dfn&gt; dfn</dfn><br>
-        <em>&lt;em&gt; emphasis</em><br>
+        <em>&lt;em&gt; emphasis</em>
       </p>
       <p>
         <a>&lt;a&gt; anchor</a><br>
-        <a href="http://www.google.com">&lt;a&gt; a + href</a><br>
+        <a href="http://www.google.com">&lt;a&gt; a + href</a>
       </p>
       <p>
         <abbr title="extended abbr text should show when mouse over">&lt;abbr&gt; abbr - extended text when mouseover.</abbr><br>
-        <acronym title="extended acronym text should show when mouse over">&lt;acronym&gt; acronym - extended text when mouseover.</acronym><br>
+        <acronym title="extended acronym text should show when mouse over">&lt;acronym&gt; acronym - extended text when mouseover.</acronym>
       </p>
-      <p>
-        <address>
-          &lt;address&gt;<br>
-          Donald Duck<br>
-          Box 555<br>
-          Disneyland
-        </address>
-      </p>      
+      <address>
+        &lt;address&gt;<br>
+        Donald Duck<br>
+        Box 555<br>
+        Disneyland
+      </address>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore.</p>
     </div>
     
     
